outline_branch_speaking_added
